--- a/app/flex/com/wefootball/components/PersonMainBox.mxml
+++ b/app/flex/com/wefootball/components/PersonMainBox.mxml
@@ -47,31 +47,30 @@
 	private function sendRequest(u:UserEvent):void {
 		requestSendBox.visible=true;
 		requestSendBox.hostId = u.user_id;
-	}	
+	}
+	
+	[Bindable]
+	private var displayuser:User = new User();	
 	private function userDisplay(u:UserEvent):void {
-		informationBox.userId = u.user_id;
-		personMainStack.selectedChild = userPage;
+		personMainStack.selectedChild = userInformationPage;
+		this.displayuser.id = u.user_id
 	}
  	private function handleIndexChange():void
 	{
-		if(personMainStack.selectedChild == userPage)
-		{
-			informationBox.user=User.currentUser;			
-		}
-		else if(personMainStack.selectedChild == myFriendListPage)
-		{
+		if(personMainStack.selectedChild == myFriendListPage)
 			friendListBox.userId=User.currentUser.id;
-		}
+		else if (personMainStack.selectedChild == userInformationPage)
+			userInformationBox.userId = displayuser.id
 	} 
 ]]>
 </mx:Script>
 		<mx:ApplicationControlBar width="200" height="100%" 
 			paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20" >
 			<mx:VBox height="100%" width="100%" >
-				<mx:LinkButton label="我的信息" click="informationBox.user=User.currentUser;personMainStack.selectedChild = userPage"/>
-				<mx:LinkButton label="我的球队" click="personMainStack.selectedChild = myTeam"/>
-				<mx:LinkButton label="我的信箱" click="personMainStack.selectedChild = myMessageBox"/>
-				<mx:LinkButton label="我的邀请" click="personMainStack.selectedChild = friendInvitationPage"/>	
+				<mx:LinkButton label="我的信息" click="personMainStack.selectedChild = myInformationPage"/>
+				<mx:LinkButton label="我的球队" click="personMainStack.selectedChild = myTeamPage"/>
+				<mx:LinkButton label="我的信箱" click="personMainStack.selectedChild = myMessagePage"/>
+				<mx:LinkButton label="我的邀请" click="personMainStack.selectedChild = myFriendInvitationPage"/>	
 				<mx:LinkButton label="我的好友" click="personMainStack.selectedChild = myFriendListPage"/>	
 				<!--<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>-->
 				<!--<mx:LinkButton label="新建球队" click="newTeamWindow.visible = true;"/>-->
@@ -79,23 +78,22 @@
 		</mx:ApplicationControlBar>
 		<mx:ApplicationControlBar width="700" height="100%" paddingTop="20" paddingBottom="20" >
 			<mx:ViewStack id="personMainStack" width="100%" height="100%" change= "handleIndexChange()">
-				<mx:VBox width="100%" height="100%" id="userPage"
+				<mx:VBox width="100%" height="100%" id="myInformationPage"
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
-					<mx:Label text="个人信息" styleName="head"/>
-					<acc:InformationBox height="100%" messageSend="sendMessage(event)"
-					 freindRequestCreation="sendRequest(event)" id="informationBox" user="{User.currentUser}"/>
+					<mx:Label text="我的信息" styleName="head"/>
+					<acc:InformationBox height="100%" user="{User.currentUser}"/>
 				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="myMessageBox"
+				<mx:VBox width="100%" height="100%" id="myMessagePage"
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
 					<mx:Label text="我的信箱" styleName="head"/>
 					<msg:MessageBox height="100%"  messageReply="sendMessage(event)" userDisplay="userDisplay(event)"/>
 				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="myTeam"
+				<mx:VBox width="100%" height="100%" id="myTeamPage"
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
 					<mx:Label text="我的球队" styleName="head"/>
 					<tm:TeamBox height="100%"/>
 				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="friendInvitationPage"
+				<mx:VBox width="100%" height="100%" id="myFriendInvitationPage"
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
 					<mx:Label text="我的邀请" styleName="head"/>
 					<fri:FriendInvitationListBox id="friendInvitationListBox"/>
@@ -104,7 +102,13 @@
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
 					<mx:Label text="我的好友" styleName="head"/>
 					<fri:FriendListBox id="friendListBox" userDisplay="userDisplay(event)"/>
-				</mx:VBox>	
+				</mx:VBox>
+				<mx:VBox width="100%" height="100%" id="userInformationPage"
+					paddingLeft="20" paddingRight="20" paddingBottom="20" >
+					<mx:Label text="{userInformationBox.user.nickname}的信息" styleName="head"/>
+					<acc:InformationBox height="100%" messageSend="sendMessage(event)"
+					 freindRequestCreation="sendRequest(event)" id="userInformationBox" />
+				</mx:VBox>
 			</mx:ViewStack>
 		</mx:ApplicationControlBar>
 </mx:HBox>
