--- a/app/flex/com/wefootball/components/account/InformationBox.mxml
+++ b/app/flex/com/wefootball/components/account/InformationBox.mxml
@@ -18,6 +18,7 @@
  			[Bindable]
 			public var user:User = null;
 			public function set userId(i:String):void {
+				user = null;
 				getUserInfoRemote(i);
 			}
 			public function refresh():void {
@@ -61,6 +62,15 @@
 			internal function postotext(f:String):String {
 				return _postotext[f]
 			}
+			
+			private function canAddAsFriend(imf:Boolean):Boolean {
+				if (user == null) return false;
+				return user.id != User.currentUser.id && !user.ismyfriend
+			}		
+			private function canRemoveFromFriend(imf:Boolean):Boolean {
+				if (user == null) return false;
+				return (user.id != User.currentUser.id) && (user.ismyfriend)
+			}
 		]]>
 	</mx:Script>
 	
@@ -95,8 +105,11 @@
 	   	   	<mx:Text text="{user.summary}" width="100%" height="50%"/>   
 	    </mx:FormItem>
 	    <mx:FormItem direction="horizontal">
-	    	<mx:Button label="发信" click="sendMessage()" visible="{user.id != User.currentUser.id}"/>
-	    	<mx:Button label="加为好友" click="addAsFriend()" visible="{user.id != User.currentUser.id}"/>
+	    	<mx:Button label="发信" click="sendMessage()" visible="{user.id != User.currentUser.id}" />
+	    	<mx:Button label="加为好友" click="addAsFriend()"
+	    		visible="{canAddAsFriend(user.ismyfriend)}" />
+	    	<mx:Button label="删除好友"
+	    		visible="{canRemoveFromFriend(user.ismyfriend)}" />
 	    </mx:FormItem>
 	</mx:Form>
 	<mx:DateFormatter id="df" formatString="YYYY-MM-DD" />
