--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,25 +2,56 @@
 
 <% form_for(@user) do |f| %>
   <p><label for="nickname">昵称</label><br/>
-  <%= f.text_field :nickname %>
+  <%= f.text_field :nickname %></p>
   
   <p><label for="birthday">生日</label><br/>
-  <%= f.date_select :birthday, :start_year=>1900 %>
+  <%= f.date_select :birthday, :start_year=>1900 %></p>
   
-  <p><label for="height">身高</label><br/>
-  <%= f.text_field :height %>
-  
-  <p><label for="weight">体重</label><br/>
-  <%= f.text_field :weight %>
+  <p><label for="favorite_star">喜欢的球星</label><br/>
+  <%= f.text_field :favorite_star %></p>
   
   <p><label for="summary">个人简介</label><br/>
-  <%= f.text_area :summary %>
+  <%= f.text_area :summary %></p>
   
   <p>
-  <%Position::POSITIONS.each do |pos|%>
-    <%=check_box_tag 'positions[]', pos, @positions.index(pos)!=nil %>
-    <%=position_text pos%>
-  <%end%>
+    <%= f.submit "Update" %>
+  </p>
+<% end %>
+  
+<% form_for(@user) do |f| %>
+  <p><%= f.check_box :is_playable %>
+  <label for="is_playable">我踢球</label></p>
+  
+  <p><label for="height">身高(cm)</label><br/>
+  <%= f.text_field :height %></p>
+  
+  <p><label for="weight">体重(kg)</label><br/>
+  <%= f.text_field :weight %></p>
+  
+  <p><label for="fitfoot">惯用脚</label><br/>
+  <%= f.select :fitfoot, User::FITFOOT.map {|ft| [fitfoot_text(ft), ft]} %></p>
+  
+  <p><label for="premier_position">首选位置</label><br/>
+  <%= f.select :premier_position, Position::POSITIONS.map {|p| [position_text(p), p]} %></p>
+  
+  <p>
+    <label for="positions">可以踢的位置</label><br/>
+    <%Position::POSITIONS.each do |pos|%>
+      <%=check_box_tag 'positions[]', pos, @positions.index(pos)!=nil %>
+      <%=position_text pos%>
+    <%end%>
+  </p>
+
+  <p>
+    <%= f.submit "Update" %>
+  </p>
+<% end %>
+
+<% form_for(@user, :html => { :multipart => true }) do |f| %>
+  <%= image_tag(@user.image) %>
+  <p>
+    <label>更改头像</label><br/>
+    <%= f.file_field  :uploaded_data %>
   </p>
 
   <p>
