--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <%= error_messages_for :user %>
+<%= error_messages_for :user_image %>
 
 <% form_for(@user) do |f| %>
   <p><label for="nickname">昵称</label><br/>
@@ -48,7 +49,7 @@
 <% end %>
 
 <% form_for(@user, :html => { :multipart => true }) do |f| %>
-  <%= image_tag(@user.image) %>
+  <%= image_tag(@user.image, :width=>100, :height=>100) %>
   <p>
     <label>更改头像</label><br/>
     <%= f.file_field  :uploaded_data %>
