--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -8,7 +8,7 @@
 <%= f.text_field :shortname %></p>
 
 <p><label for="found_time">建队日期</label><br/>
-<%= f.datetime_select :found_time, :discard_hour=>true, :discard_minute=>true  %>
+<%= f.date_select :found_time, :start_year=>1900, :end_year=>Date.today.year %></p>
 
 <p><label for="style">球队风格</label><br/>
 <%= f.text_field :style %></p>
