--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,11 @@
 <%= error_messages_for :user %>
-<%= error_messages_for :user_image %>
 
 <% form_for(@user) do |f| %>
   <p><label for="nickname">昵称</label><br/>
   <%= f.text_field :nickname %></p>
   
   <p><label for="birthday">生日</label><br/>
-  <%= f.date_select :birthday, :start_year=>1900 %></p>
+  <%= f.date_select :birthday, :start_year=>1900, :end_year=>Date.today.year %></p>
   
   <p><label for="favorite_star">喜欢的球星</label><br/>
   <%= f.text_field :favorite_star %></p>
@@ -49,7 +48,7 @@
 <% end %>
 
 <% form_for(@user, :html => { :multipart => true }) do |f| %>
-  <%= image_tag(@user.image, :width=>50, :height=>50) %>
+  <%= user_image_tag @user %>
   <p>
     <label>更改头像</label><br/>
     <%= f.file_field  :uploaded_data %>
