--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,46 +1,48 @@
 <h1><%= h @user.nickname %></h1>
+<%= user_image_tag @user %>
 
-<%if @user.birthday!=nil%>
-  <p>
-    <label>生日</label>
-    <%= @user.birthday%>
-  </p>
-<%end%>
+<p>
+  <label>生日</label>
+  <%= @user.birthday%>
+</p>
 
-<%if @user.height!=nil && @user.height>0%>
+<p>
+  <label>喜欢的球星</label>
+  <%= @user.favorite_star%>
+</p>
+
+<p>
+    <label>个人简介</label>
+    <p><%=simple_format @user.summary%></p>
+</p>
+
+<%if @user.is_playable%>
   <p>
     <label>身高</label>
     <%= @user.height%>cm
   </p>
-<%end%>
-
-<%if @user.weight!=nil && @user.weight>0%>
   <p>
     <label>体重</label>
     <%= @user.weight%>kg
   </p>
-<%end%>
-
-<%if @user.fitfoot!=nil%>
   <p>
     <label>惯用脚</label>
     <%=fitfoot_text @user.fitfoot%>
   </p>
-<%end%>
-
-<%if @user.positions.length!=0%>
   <p>
-    <label>习惯位置</label>
+    <label>首选位置</label>
+    <%=position_text @user.premier_position%>
+  </p>
+  <p>
+    <label>可以踢的位置</label>
     <%=(@user.positions.map {|p| position_text p.label}).join(', ')%>
   </p>
 <%end%>
 
-<p><%=simple_format @user.summary%></p>
-
 <%if @user.id != current_user.id%>
   <%= link_to("发信", new_message_path(:to=>@user.id))%>
   <%= link_to_if(!current_user.is_my_friend?(@user), "加为好友", 
-                  new_friend_invitation_path(:host_id=>@user.id)){}%>
-  <%= link_to_if(current_user.is_my_friend?(@user), "不和他玩", 
-                  friend_relation_path(:user_id=>@user.id),:method=>"delete"){}%>
+                  new_friend_invitation_path(:host_id=>@user.id)){
+                    link_to("不和他玩", friend_relation_path(:user_id=>@user.id),:method=>"delete")
+                  }%>
 <%end%>
