--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -39,9 +39,12 @@
 <%end%>
 
 <%if current_user.is_team_admin_of?(@team)%>
+  <%= link_to "编辑队伍信息", edit_team_path(@team)%>
   <%= link_to "创建训练", new_team_training_path(@team)%>
   <%= link_to "所有入队申请", team_team_join_requests_path(@team)%>
   <%= link_to "所有入队邀请", team_team_join_invitations_path(@team)%>
+  <%= link_to "成员管理", team_team_joins_path(@team)%>
+  <%= link_to "邀请朋友加入", new_team_team_join_invitation_path(@team)%>
 <%end%>
 
 <h1><%=h @team.shortname%>的成员</h1>
@@ -63,9 +66,9 @@
   <%@trainings.each do |t|%>
     <tr>
       <td><%= t.start_time.strftime('%Y-%m-%d')%></td>
-      <td><%= t.start_time.strftime('%H-%M')%>-<%= t.end_time.strftime('%H-%M')%></td>
+      <td><%= t.start_time.strftime('%H:%M')%>-<%= t.end_time.strftime('%H:%M')%></td>
       <td><%=h t.location%></td>
-      <td><%=link_to '查看', training_path(t)%></td>
+      <td><%=link_to '查看', training_view_path(t)%></td>
     </tr>
   <%end%>
 </table>
