--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -57,6 +57,12 @@
   <%else%>
     <%= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete")%>
   <%end%>
+<%else%>
+  <%= link_to("修改个人信息", edit_user_path(@user))%>
+  <%= link_to("收件箱", messages_path(:as=>'receiver'))%>
+  <%= link_to("朋友邀请", friend_invitations_path)%>
+  <%= link_to("队伍邀请", user_team_join_invitations_path(@user))%>
+  <%= link_to("队伍申请", user_team_join_requests_path(@user))%>
 <%end%>
 
 <h1><%=h @user.nickname%>的朋友</h1>
@@ -86,9 +92,9 @@
   <%@trainings.each do |t|%>
     <tr>
       <td><%= t.start_time.strftime('%Y-%m-%d')%></td>
-      <td><%= t.start_time.strftime('%H-%M')%>-<%= t.end_time.strftime('%H-%M')%></td>
+      <td><%= t.start_time.strftime('%H:%M')%>-<%= t.end_time.strftime('%H:%M')%></td>
       <td><%=h t.location%></td>
-      <td><%=link_to '查看', training_path(t)%></td>
+      <td><%=link_to '查看', training_view_path(t)%></td>
     </tr>
   <%end%>
 </table>
