--- a/app/views/match_invitations/new.html.erb
+++ b/app/views/match_invitations/new.html.erb
@@ -1,155 +1,74 @@
-<h1>New match_invitation</h1>
+<div>
+  <h1>比赛邀请</h1>
+</div>
 
 <%= error_messages_for :match_invitation %>
 
-<% form_for(@match_invitation) do |f| %>
+<% form_for :match_invitation, :url => match_invitations_path, :method=>"POST" do |f| %>
+  <%= f.hidden_field :guest_team_id,  :value=>@guest_team_id%>
+
   <p>
-    <b>Start time</b><br />
+    <b>本队负责人</b><br />
+    <%= f.text_field :host_team_leader_id %>
+  </p>
+  
+  <p>
+    <b>开始时间</b><br />
     <%= f.datetime_select :start_time %>
   </p>
 
   <p>
-    <b>Location</b><br />
+    <b>地点</b><br />
     <%= f.text_field :location %>
   </p>
 
   <p>
-    <b>Match type</b><br />
-    <%= f.text_field :match_type %>
+    <b>比赛类型</b><br />
+    <%= f.select :match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %>
   </p>
 
   <p>
-    <b>Size</b><br />
-    <%= f.text_field :size %>
+    <b>参加人数</b><br />
+    <%= f.select :size, MatchInvitation::SIZES %>
   </p>
 
   <p>
-    <b>Has judge</b><br />
+    <b>是否有裁判</b><br />
     <%= f.check_box :has_judge %>
   </p>
 
   <p>
-    <b>Has card</b><br />
+    <b>是否有红黄牌</b><br />
     <%= f.check_box :has_card %>
   </p>
 
   <p>
-    <b>Has offside</b><br />
+    <b>是否有越位</b><br />
     <%= f.check_box :has_offside %>
   </p>
 
   <p>
-    <b>Win rule</b><br />
-    <%= f.text_field :win_rule %>
+    <b>上下半场各</b><br />
+    <%= f.text_field :half_match_length %>分钟
   </p>
 
   <p>
-    <b>Description</b><br />
-    <%= f.text_area :description %>
+    <b>中场休息</b><br />
+    <%= f.text_field :rest_length %>分钟
+  </p>  
+  
+  <p>
+    <b>决胜规则</b><br />
+    <%= f.select :win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
   </p>
 
   <p>
-    <b>Half match length</b><br />
-    <%= f.text_field :half_match_length %>
-  </p>
-
-  <p>
-    <b>Rest length</b><br />
-    <%= f.text_field :rest_length %>
-  </p>
-
-  <p>
-    <b>Host team leader</b><br />
-    <%= f.text_field :host_team_leader_id %>
-  </p>
-
-  <p>
-    <b>Guest team leader</b><br />
-    <%= f.text_field :guest_team_leader_id %>
-  </p>
-
-  <p>
-    <b>Host team</b><br />
-    <%= f.text_field :host_team_id %>
-  </p>
-
-  <p>
-    <b>Guest team</b><br />
-    <%= f.text_field :guest_team_id %>
-  </p>
-
-  <p>
-    <b>Edit by host team</b><br />
-    <%= f.check_box :edit_by_host_team %>
-  </p>
-
-  <p>
-    <b>New start time</b><br />
-    <%= f.datetime_select :new_start_time %>
-  </p>
-
-  <p>
-    <b>New location</b><br />
-    <%= f.text_field :new_location %>
-  </p>
-
-  <p>
-    <b>New match type</b><br />
-    <%= f.text_field :new_match_type %>
-  </p>
-
-  <p>
-    <b>New size</b><br />
-    <%= f.text_field :new_size %>
-  </p>
-
-  <p>
-    <b>New has judge</b><br />
-    <%= f.check_box :new_has_judge %>
-  </p>
-
-  <p>
-    <b>New has card</b><br />
-    <%= f.check_box :new_has_card %>
-  </p>
-
-  <p>
-    <b>New has offside</b><br />
-    <%= f.check_box :new_has_offside %>
-  </p>
-
-  <p>
-    <b>New win rule</b><br />
-    <%= f.text_field :new_win_rule %>
-  </p>
-
-  <p>
-    <b>New description</b><br />
+    <b>简要介绍</b><br />
     <%= f.text_area :new_description %>
   </p>
 
   <p>
-    <b>New half match length</b><br />
-    <%= f.text_field :new_half_match_length %>
-  </p>
-
-  <p>
-    <b>New rest length</b><br />
-    <%= f.text_field :new_rest_length %>
-  </p>
-
-  <p>
-    <b>New host team leader</b><br />
-    <%= f.text_field :new_host_team_leader_id %>
-  </p>
-
-  <p>
-    <b>New guest team leader</b><br />
-    <%= f.text_field :new_guest_team_leader_id %>
-  </p>
-
-  <p>
-    <%= f.submit "Create" %>
+    <%= f.submit "创建邀请" %>
   </p>
 <% end %>
 
