--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
   来自<%=h @post.user.nickname%>
   <p>
     <b>Content:</b>
-    <%=simple_format @post.content %>
+    <%=simple_format auto_link(@post.content, :urls, :target => '_blank') %>
   </p>
 
   <%= link_to '修改', edit_post_path(@post) if @post.can_be_modified_by?(current_user)%> |
@@ -24,7 +24,7 @@
     来自<%=h reply.user.nickname%>
     <p>
       <b>Content:</b>
-      <%=simple_format reply.content %>
+      <%=simple_format auto_link(reply.content, :urls, :target => '_blank') %>
     </p>
 
     <%= link_to "删除", post_reply_path(@post, reply.id), :method=>"delete" if reply.can_be_destroyed_by?(current_user) %>
