--- a/app/views/team_joins/index_user.html.erb
+++ b/app/views/team_joins/index_user.html.erb
@@ -3,20 +3,35 @@
 </div>
 
 <%@uts.each do |ut| %>
+  <%@ut = ut%>
   <div>
-    <%=link_to ut.user.nickname, user_path(ut.user.id)%>
-    <%=link_to_if(ut.can_destroy_by?(current_user),"逐出球队",user_team_team_join_path(ut.user.id,@team_id,0),:method=>:delete){}%>
-    <%=link_to_if(ut.can_promote_as_admin_by?(current_user),"提成管理员",
-      user_team_team_join_path(ut.user.id,@team_id,0,:team_join=>{:is_admin=>true}),
-        :method=>:put){}%>
-    <%=link_to_if(ut.can_degree_as_common_user_by?(current_user),"降为普通用户",
-      user_team_team_join_path(ut.user.id,@team_id,0,:team_join=>{:is_admin=>false}),
-        :method=>:put){}%>
+    <%=user_image_tag @ut.user%>
+    <%=link_to @ut.user.nickname, user_view_path(@ut.user.id)%>
+    
+    <%if current_user.is_team_admin_of?(@team_id)%>
+    <% form_for :ut, :url=>team_join_path(@ut), :html=>{:method=>:put} do |f| %>
+      <%if (!@ut.is_admin && @ut.can_promote_as_admin_by?(current_user)) || (@ut.is_admin && @ut.can_degree_as_common_user_by?(current_user))%>
+        <p>
+          <b>管理员</b>
+          <%= f.check_box :is_admin %>
+        </p>
+      <%end%>
+      
+      <%if @ut.user.is_playable%>
+        <p>
+          <b>队员</b>
+          <%= f.check_box :is_player %>
+        </p>
+        <% if @ut.is_player%>
+          <p><label for="position">队内位置</label><br/>
+          <%= f.select :position, Position::POSITIONS.map {|p| [position_text(p), p]}, {:include_blank => "没有位置"} %></p>
+        <%end%>
+      <% end %>
+      <p>
+        <%= f.submit "更新" %>
+      </p>
+    <%end%>
+    <%=button_to("逐出球队",team_join_path(@ut),:method=>:delete) if @ut.can_destroy_by?(current_user)%>
+    <% end %>
   </div>
 <%end%>
-
-<%#= link_to 'Previous page', admin_user_url({ :page => @user_pages.current.previous }) if @user_pages.current.previous %>
-<%#= link_to 'Next page', admin_user_url({ :page => @user_pages.current.next }) if @user_pages.current.next %> 
-
-
-
